@@ -2715,7 +2715,7 @@ static Image *ReadOnePNGImage(MngInfo *mng_info,
   /*
     Store the object if necessary.
   */
-  if (object_id && !mng_info->frozen[object_id])
+  if (object_id && object_id <= MNG_MAX_OBJECTS && !mng_info->frozen[object_id])
     {
       if (mng_info->ob[object_id] == (MngBuffer *) NULL)
         {
@@ -4568,6 +4568,8 @@ static Image *ReadMNGImage(const ImageInfo *image_info,
 
                   for (i=(int) first_object; i <= (int) last_object; i++)
                     {
+                      if (i > MNG_MAX_OBJECTS)
+                        continue;
                       if (mng_info->exists[i] && !mng_info->frozen[i])
                         {
                           MngBox
@@ -4642,6 +4644,8 @@ static Image *ReadMNGImage(const ImageInfo *image_info,
 
                   for (i=(long) first_object; i <= (long) last_object; i++)
                     {
+                      if (i > MNG_MAX_OBJECTS)
+                        continue;
                       if (mng_info->exists[i] && !mng_info->frozen[i] &&
                           (p-chunk) < (ssize_t) (length-8))
                         {
