@@ -1,3 +1,8 @@
+2017-07-09  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>
+
+	* coders/png.c (ReadOneJngImage): Ignore out-of-bounds MOVE
+	and CLIP object_id's.
+
 2017-07-08  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>
 
 	* coders/png.c (ReadOneJngImage): Revised double-free fix.
